[b][color=orange]v3.25[/color], 10.04.2018[/b][list]
[*]Remove the UIButton module.
[*]Create own UIButtons attached on the Left Chat Panel.
[*]The MicroBar hides now also in Pet Battle, if Combat hide is selected.
[*]Remove the right click function from the MicroBar.
[*]Add a "NoBackdrop" option to the Location Panel.
[*]Small Layout adjustments.[/list]

[b][color=orange]v3.24[/color], 07.04.2018[/b][list]
[*]Follow the recent BigWigs API changes and BigWigs Skin update.
[*]Add chat commands: /cleanboa = Remove Heirlooms from your bag.
[*]   /repop, /release = Release spirit if the dialog doesn't show up.
[*]Adjust the pet Frame position.
[*]Let the minimap border blink, if you have new mail/invites. :>
[*]Create a button glow animation.
[*]Adjust the Style Panel size for bigger resolutions.[/list]

[b][color=orange]v3.23[/color], 01.04.2018[/b][list]
[*]Removed a global string which broke other AddOns.[/list]

[b][color=orange]v3.22[/color], 01.04.2018[/b][list]
[*]Change the right and left ActionBar layout.
[*]Prevent a nil error with the recent S&L changes for the Minimap buttons.
[*]Create an own Minimap Button bar.
[*]Update the BigWigs Profile.
[*]Add an shadowoverlay to my UI. Which makes the UI darker. I love it!![/list]

[b][color=orange]v3.21[/color], 29.03.2018[/b][list]
[*]Dont set the ls_Skin automatic.
[*]Removed cargBags_Nivaya from the package.
[*]The SplashScreen now shows only once a day per char.
[*]Update the Garrison Capacitive Skin.
[*]Update the Party Layout. You have to do the install step for UnitFrames again.
[*]Prevent some lua errors if you click the MicroBar Buttons in combat.[/list]

[b][color=orange]v3.20[/color], 23.03.2018[/b][list]
[*]Add an itemlevel link feature. Shows the slot/item level on linked items in chat.
[*]Update a lot of skins.
[*]Change the default position for the WorldMap.
[*]Add the ls_Toast skin to my Plugin.
[*]Add my logo on the ElvUI config.
[*]Remove the custom Minimap blip textures.