@@ -17,13 +17,15 @@ local CLOSE = CLOSE
 
 local ChangeLogData = {
 	"Changes:",
-		"• Remove the UIButton module.",
-		"• Create own UIButtons attached on the Left Chat Panel.",
-		"• The MicroBar hides now also in Pet Battle, if Combat hide is selected.",
-		"• Remove the right click function from the MicroBar.",
-		"• Add a 'NoBackdrop' option to the Location Panel.",
-		"• Small Layout adjustments.",
-		-- "• ",
+		"• Prevent a rare nil error in my Styling function.",
+		"• Add a frame to display missing Flask, Food, Runes. Thx Exeil for the idea. <3",
+		"• Styled the ElvUI Databars.",
+		"• Fix an install error. *derp*",
+		"• Move the WorldStateAlwaysUpFrame a bit down, so it donts overlaps elements.",
+		"• ADD PEPE TO MY GAMEMENU!!",
+		"• Adjust the position for the Boss Frames and ObjectiveTracker.",
+		"• Add a DeadlyBossMods Profile and Skin.",
+		-- "• ''",
 	" ",
 	"Notes:",
 		"• You find the link for cargBags_Nivaya on my AddOn Page on tukui.org",
